assignments/PA4/tests/bad/bad3.cl
class D inherits D {};

class E inherits D {};

class D1 inherits D2 {};
class D2 inherits D3 {};
class D3 inherits D4 {};
class D4 inherits D1 {};

